[package]
name = "Rusty_SCShell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel32-sys = "0.2.2"
windows = { version = "0.35.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory" ,
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Services"
]}